--- a/ROS2/bpl_msgs/package.xml
+++ b/ROS2/bpl_msgs/package.xml
@@ -2,10 +2,10 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>bpl_msgs</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="john@sumskas.com">johnsumskas</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.0.1</version>
+  <description>Contains the Blueprint Lab ROS Message Definitions</description>
+  <maintainer email="j.sumskas@blueprintlab.com">jsumskasbpl</maintainer>
+  <license>Properitary Software, No Public License</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
