--- a/ROS2/bpl_passthrough/package.xml
+++ b/ROS2/bpl_passthrough/package.xml
@@ -2,10 +2,11 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>bpl_passthrough</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="john@sumskas.com">johnsumskas</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.0.1</version>
+  <description>Package that allows for communication to BPL Products.</description>
+  <maintainer email="j.sumskas@blueprintlab.com">jsumskasbpl</maintainer>
+  <license>Properitary Software, No Public License</license>
+
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
