--- a/ROS/bpl_bravo_description/CMakeLists.txt
+++ b/ROS/bpl_bravo_description/CMakeLists.txt
@@ -188,6 +188,11 @@ include_directories(
 #   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
 
+install(
+  DIRECTORY launch meshes rviz urdf
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
 #############
 ## Testing ##
 #############
